fixed the nav lightbox so that the links have no extra padding when viewed in a landscape orientation. Also adjusted the light box height to allow content to overflow if necessary.

--- a/app/app.css
+++ b/app/app.css
@@ -161,13 +161,16 @@ a {
 .light-box {
   position: absolute;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   top: 0;
   left: 0;
   background-color: black;
   opacity: 0; }
   .light-box nav {
     padding-top: 20%; }
+    @media screen and (orientation: landscape) {
+      .light-box nav {
+        padding-top: 0; } }
     .light-box nav ul {
       list-style: none;
       text-align: center;
