--- a/app/components/scss/main.scss
+++ b/app/components/scss/main.scss
@@ -52,6 +52,12 @@ $footer-height:100px;
     }
 }
 
+@mixin landscape {
+    @media screen and (orientation:landscape) {
+        @content;
+    }
+}
+
 /*end break points*/
 
 /*utilities*/
@@ -262,7 +268,7 @@ a {
 .light-box {
     position:absolute;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     top: 0;
     left: 0;
     background-color: $bg-secondary;
@@ -270,6 +276,10 @@ a {
 
     nav {
         padding-top: 20%;
+
+        @include landscape {
+            padding-top: 0;
+        }
 
         ul {
             list-style: none;
